--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="app">
-        <ul>
+        <ul v-if="arrayEmail.length === 10">
             <li v-for="email in arrayEmail">{{email}}</li>
         </ul>
     </div>
